stuff fixed, no more overlapping of top right menu + my english is not englishing

--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,17 @@
 }
 
 .top-left-nav {
-    position: fixed; 
+    position: absolute; 
     top: 0;
     left: 0;
     padding: 10px;
-    z-index: 1000; 
 }
 
 .top-right-nav {
-    position: fixed;
+    position:absolute;
     top: 0;
-    right: 0;
+    right:0;
     padding: 10px;
-    z-index: 1000;
 }
 
 #dashboard {
